--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,94 @@ ul {
   gap: 25px;
 }
 
-.info__specs-caption{
-width: 185px;
+.info__specs-caption {
+  width: 185px;
 }
+
+.buy {
+  padding: 150px 0;
+}
+
+.buy__inner {
+  display: flex;
+  align-items: center;
+  gap: 90px;
+}
+
+.buy__content {
+  width: 510px;
+  position: relative;
+}
+
+.buy__title {
+  font-family: 'Comfortaa', cursive;
+  text-transform: uppercase;
+  margin-bottom: 50px;
+  font-size: 60px;
+  line-height: 67px;
+  color: #0093A1;
+}
+
+.buy__list {
+  margin-bottom: 25px;
+}
+
+.buy__item {
+  margin-bottom: 25px;
+  width: 285px;
+}
+
+.buy__item:hover .buy__item-title {
+  color: #0093A1;
+}
+
+.buy__item-title {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  transition: color .3s;
+}
+
+.buy__price {
+  position: absolute;
+  right: 0;
+  bottom: 130px;
+  width: 201px;
+  height: 199px;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 42px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../images/star.svg);
+}
+
+.buy__btn {
+  font-family: 'Comfortaa', cursive;
+  text-transform: uppercase;
+  color: #0093A1;
+  background-color: #FFFFFFFF;
+  border: 2px solid #0093A1;
+  padding: 18px;
+  text-align: center;
+  max-width: 484px;
+  width: 100%;
+  font-size: 40px;
+  line-height: 45px;
+  font-weight: 700;
+  cursor: pointer;
+  transition: all .3s;
+}
+
+/* .buy__btn:hover {
+  color: #262C27;
+  background-color: #B9C400;
+  border: none;
+} */
+
+. {}
+
+. {}
+
+. {}
