--- a/css/style.css
+++ b/css/style.css
@@ -350,11 +350,11 @@ ul {
   transition: all .3s;
 }
 
-/* .buy__btn:hover {
+.buy__btn:hover {
   color: #262C27;
   background-color: #B9C400;
-  border: none;
-} */
+  border-color: #B9C400;
+}
 
 . {}
 
