--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,18 @@ ul {
   list-style-type: none;
 }
 
+img {
+  object-fit: cover;
+}
+
+.title {
+  font-family: 'Comfortaa', cursive;
+  text-transform: uppercase;
+  font-size: 60px;
+  line-height: 67px;
+  font-weight: 400;
+}
+
 .container {
   max-width: 1230px;
   padding: 0 15px;
@@ -218,6 +230,7 @@ ul {
   border: none;
   cursor: pointer;
   background-color: transparent;
+  position: absolute;
 }
 
 .popup-btn span {
@@ -275,7 +288,7 @@ ul {
 }
 
 .buy {
-  padding: 150px 0;
+  padding: 150px 0 0;
 }
 
 .buy__inner {
@@ -290,11 +303,7 @@ ul {
 }
 
 .buy__title {
-  font-family: 'Comfortaa', cursive;
-  text-transform: uppercase;
   margin-bottom: 50px;
-  font-size: 60px;
-  line-height: 67px;
   color: #0093A1;
 }
 
@@ -355,6 +364,155 @@ ul {
   background-color: #B9C400;
   border-color: #B9C400;
 }
+
+.technology {
+  margin-bottom: 150px;
+}
+
+.technology__top {
+  background-image: url(../images/technology-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.technology__top-inner {
+  position: relative;
+  min-height: 120vh;
+}
+
+.technology__btn {
+  right: 350px;
+  top: 50vh;
+}
+
+.technology__top-box {
+  position: absolute;
+  left: 0;
+  bottom: 70px;
+}
+
+.technology__title {
+  max-width: 470px;
+  margin-bottom: 62px;
+}
+
+
+.technology__list {
+  margin: 0;
+  padding-left: 20px;
+}
+
+.technology__list-item {
+  padding-left: 24px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 15px;
+}
+
+.gallery__box {
+  display: flex;
+  gap: 68px;
+  margin-top: 115px;
+}
+
+.gallery__text {
+  width: 350px;
+}
+
+.gallery-min {
+  display: grid;
+  gap: 30px 24px;
+  grid-template-columns: 481px 208px;
+  grid-template-rows: 432px 300px;
+  transform: translateY(-50%);
+  position: relative;
+  padding: 72px 31px 52px;
+}
+
+.gallery-min__img--1 {
+  grid-column: 1 / 3;
+  border-radius: 400px 0 0 0;
+}
+
+.gallery-min__img--2 {
+  border-radius: 0 0 0 300px;
+}
+
+
+.gallery-min::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border: 3px solid #262C27;
+  border-radius: 200px 0 300px;
+}
+
+.gallery-max {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 300px 469px 391px;
+  grid-template-rows: 340px 270px 270px;
+}
+
+.gallery-max__img--2 {
+  grid-column: 2 / -1;
+  justify-self: end;
+  border-radius: 0 500px 0 0;
+}
+
+.gallery-max__img--3 {
+  border-radius: 0 0 150px 0;
+}
+
+.gallery-max__img--4 {
+  border-radius: 0 200px 0 0;
+}
+
+.gallery-max__img--5 {
+  border-radius: 200px 0 0 0;
+}
+
+.gallery-max__img--6 {
+  grid-column: 2 / -1;
+  border-radius: 0 0 0 400px;
+}
+
+.gallery-max__text {
+  background-color: #0093A1;
+  border-radius: 0 0 0 200px;
+  font-style: italic;
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 39px;
+  color: #FFFFFFFF;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+
+
+. {}
+
+. {}
+
+. {}
+
+. {}
+
+. {}
+
+. {}
+
+. {}
+
+. {}
 
 . {}
 
