--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ img {
 
 .header__btn {
   text-transform: uppercase;
-  color: #FFFFFFFF;
+  color: #FFF;
   background-color: #262C27;
   border: none;
   padding: 12px 71px 8px 77px;
@@ -129,7 +129,7 @@ img {
   max-width: 550px;
   text-align: center;
   margin-right: 30px;
-  color: #FFFFFFFF;
+  color: #FFF;
   font-family: 'Comfortaa', cursive;
   font-weight: 700;
 }
@@ -216,7 +216,7 @@ img {
 .info__top-text {
   padding-top: 245px;
   width: 290px;
-  color: #FFFFFFFF;
+  color: #FFF;
   position: relative;
 }
 
@@ -236,7 +236,7 @@ img {
 .popup-btn span {
   padding-top: 12px;
   display: block;
-  color: #FFFFFFFF;
+  color: #FFF;
 }
 
 .info__btn {
@@ -246,7 +246,7 @@ img {
 }
 
 .info__top-text--two {
-  border-bottom: 1px solid #FFFFFFFF;
+  border-bottom: 1px solid #FFF;
 }
 
 .info__top-text--one {
@@ -257,7 +257,7 @@ img {
   display: flex;
   align-items: center;
   gap: 130px;
-  color: #FFFFFFFF;
+  color: #FFF;
   padding-bottom: 50px;
 }
 
@@ -270,8 +270,8 @@ img {
 }
 
 .info__specs-list {
-  border-top: 1px solid #FFFFFFFF;
-  border-bottom: 1px solid #FFFFFFFF;
+  border-top: 1px solid #FFF;
+  border-bottom: 1px solid #FFF;
   padding: 30px 0;
   width: 565px;
   font-weight: 700;
@@ -346,7 +346,7 @@ img {
   font-family: 'Comfortaa', cursive;
   text-transform: uppercase;
   color: #0093A1;
-  background-color: #FFFFFFFF;
+  background-color: #FFF;
   border: 2px solid #0093A1;
   padding: 18px;
   text-align: center;
@@ -489,33 +489,80 @@ img {
   font-weight: 800;
   font-size: 32px;
   line-height: 39px;
-  color: #FFFFFFFF;
+  color: #FFF;
   display: flex;
   justify-content: center;
   text-align: center;
   align-items: center;
 }
 
+.footer {
+  padding: 100px 0 80px;
+  background-color: #262C27;
+  color: #FFF;
+}
 
+.footer__top {
+  display: flex;
+  justify-content: space-between;
+}
 
-. {}
+.footer__title {
+  margin-bottom: 27px;
+}
 
-. {}
+.footer__form {
+  max-width: 500px;
+}
 
-. {}
+.footer__form-input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, .4);
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+  margin-bottom: 57px;
+  color: #FFF;
+}
 
-. {}
+.footer__form-input::placeholder {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22;
+  opacity: 0.2;
+}
 
-. {}
+.footer__form-btn {
+  background-color: #FFF;
+  border: none;
+  padding: 10px 66px;
+  margin-bottom: 110px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 22px;
+  color: #000;
+  font-family: 'Comfortaa', cursive;
+  cursor: pointer;
+}
 
-. {}
+.footer__social-title {
+  margin-bottom: 28px;
+  font-weight: 700;
+}
 
-. {}
+.footer__gallery {
+  display: grid;
+  gap: 52px;
+  grid-template-columns: repeat(4, 1fr);
+  margin-bottom: 50px;
+}
 
-. {}
-
-. {}
-
-. {}
+.footer__menu-list {
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+}
 
 . {}
