--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,11 @@ img {
   bottom: 0;
   right: 0;
   left: 0;
-  height: 456px;
+  height: 450px;
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
-  transform: translateY(35%);
+  transform: translateY(45%);
   z-index: 2;
 }
 
@@ -81,11 +81,11 @@ img {
   bottom: 0;
   right: 0;
   left: 0;
-  height: 456px;
+  height: 450px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  transform: translateY(75%) rotate(180deg);
+  transform: translateY(85%) rotate(180deg);
   z-index: 3;
 }
 
@@ -132,6 +132,7 @@ img {
   color: #FFF;
   font-family: 'Comfortaa', cursive;
   font-weight: 700;
+  margin-bottom: 70px;
 }
 
 .header__title {
@@ -156,7 +157,7 @@ img {
 .header__decor-text--one {
   z-index: 1;
   right: 145px;
-  bottom: 120px;
+  bottom: 3%;
 }
 
 .header__decor-text--one,
@@ -170,7 +171,7 @@ img {
 .header__decor-text--two {
   left: 256px;
   z-index: 4;
-  bottom: 0;
+  bottom: -20%;
 }
 
 .header__decor-text--three {
@@ -182,6 +183,7 @@ img {
   line-height: 39px;
   font-style: italic;
   text-align: center;
+  bottom: -15%;
 }
 
 .info {
@@ -237,6 +239,24 @@ img {
   padding-top: 12px;
   display: block;
   color: #FFF;
+  transition: color .3s;
+}
+
+.popup-btn path,
+.popup-btn circle {
+  transition: all .3s;
+}
+
+.popup-btn:hover path {
+  fill: #B9C400;
+}
+
+.popup-btn:hover circle {
+  stroke: #B9C400;
+}
+
+.popup-btn:hover span {
+  color: #0093A1;
 }
 
 .info__btn {
@@ -340,6 +360,11 @@ img {
   justify-content: center;
   align-items: center;
   background-image: url(../images/star.svg);
+  transition: transform .3s;
+}
+
+.buy__price:hover {
+  transform: scale(1.3);
 }
 
 .buy__btn {
@@ -529,7 +554,7 @@ img {
 .footer__form-input::placeholder {
   font-weight: 700;
   font-size: 18px;
-  line-height: 22;
+  line-height: 22px;
   opacity: 0.2;
 }
 
@@ -565,4 +590,240 @@ img {
   justify-content: space-between;
 }
 
-. {}
+.footer__logo {
+  align-self: flex-start;
+}
+
+.footer__logo path {
+  transition: fill .3s;
+}
+
+.footer__logo:hover path {
+  fill: #0093A1;
+}
+
+@media (max-width: 1230px) {
+  .header__decor-text--two {
+    left: 0;
+  }
+
+  .buy__inner {
+    flex-wrap: wrap;
+  }
+
+  .buy__img {
+    order: -1;
+    max-width: 100%;
+  }
+
+  .buy__content {
+    width: 100%;
+  }
+
+  .buy__price {
+    pointer-events: none;
+  }
+
+  .buy__item {
+    width: 100%;
+    max-width: 600px;
+  }
+
+  .gallery-max {
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: auto auto auto;
+    width: 100%;
+  }
+
+  .gallery-max__img {
+    width: 100%;
+    align-self: stretch;
+  }
+
+  .gallery-min {
+    transform: translateY(0%);
+  }
+
+  .footer__gallery-item {
+    width: 100%;
+    align-self: stretch;
+  }
+}
+
+@media (max-width: 1175px) {
+  .gallery__box {
+    flex-wrap: wrap;
+  }
+
+  .gallery-min {
+    margin-top: 0;
+  }
+
+  .gallery__text {
+    width: 100%;
+  }
+
+  .gallery-min__img {
+    width: 100%;
+    align-self: stretch;
+  }
+
+  .gallery-min {
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto auto;
+    width: 100%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .info__top {
+    display: block;
+  }
+
+  .info__top-text {
+    width: 100%;
+  }
+
+  .info__top-text--two {
+    padding-bottom: 25px;
+    padding-top: 45px;
+  }
+
+  .info__top-img {
+    width: 227px;
+    margin: 0 auto;
+    display: block;
+  }
+
+  .info__specs {
+    display: block;
+  }
+
+  .footer__top {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer__logo {
+    order: -1;
+    margin: 0 auto 50px;
+    display: inline-block;
+  }
+
+  .footer__gallery {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+
+  .footer__menu-list {
+    display: block;
+    text-align: center;
+  }
+  .footer__menu-item{
+    padding: 15px 0;
+  }
+  .footer__social-title{
+    text-align: center;
+  }
+}
+
+@media (max-width: 840px) {
+  .buy__price {
+    bottom: auto;
+    top: -350px;
+  }
+
+  .gallery-min {
+    margin-bottom: 50px;
+  }
+
+  .gallery-max__text {
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
+
+@media (max-width: 720px) {
+  .header__top {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px 90px;
+  }
+
+  .header__btn {
+    width: 70%;
+  }
+
+  .header__content-box {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 630px) {
+  .info__specs-list {
+    width: 100%;
+  }
+
+  .info__specs-item {
+    display: block;
+  }
+
+  .title {
+    font-size: 48px;
+    line-height: 56px;
+  }
+}
+
+@media (max-width: 500px) {
+  .buy__price {
+    width: 170px;
+    height: 168px;
+    background-size: cover;
+    top: -185px
+  }
+
+  .gallery-min {
+    padding: 20px 10px 20px;
+  }
+}
+
+@media (max-width: 414px) {
+  .header__decor-text {
+    display: none;
+  }
+
+  .header__content {
+    z-index: 5;
+  }
+
+  .gallery-min::before {
+    display: none;
+  }
+
+  .gallery-min,
+  .gallery-max {
+    gap: 10px;
+  }
+
+  .technology__title {
+    font-size: 32px;
+    line-height: 36px;
+  }
+
+  .footer__title{
+    font-size: 34px;
+    line-height: 38px;
+  }
+
+  .footer__logo svg{
+    width: 90%;
+  }
+}
+
+@media (max-width: 375px) {
+  .header__title {
+    font-size: 55px;
+    line-height: 60px;
+  }
+}
